# testrunner

./: .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  README.md  build.ninja  conanfile.py  test.cc  testrunner.h  testrunner_core.h  testrunner_main.cc  testrunner_main.h  testrunner_selftest.cc  testrunner_selftest.h
.github/workflows/: build.yml
cmake/: testrunnerConfig.cmake.in
include/testrunner/: testrunner.h
src/: testrunner.cc  testrunner_main.cc  testrunner_selftest.cc
test_package/: CMakeLists.txt  conanfile.py  package_test.cc
